fix: list overflow auto

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -228,7 +228,7 @@ main {
     display: flex;
     height: 100%;
     flex-direction: column;
-    overflow: hidden scroll;
+    overflow: auto;
     padding: 0 4px 4px;
     border-radius: 4px;
     color: rgba(255, 255, 255, 0.75);
